2007-12-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Remember to delete the progressbar and label also when
	the game was not started.
	* tools/upalyzer/analyse.php: Added initial version of the update
	analysis tool upalyzer.
	* tools/upalyzer/analyse.php: Optimized with single loop approach and
	nicer printing calls, inspired by doener's version. Also added list of
	update entries and their respective update.

2007-12-14  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/head-mask.png,
	data/graphics/sprites/head-mask.xml,
	data/graphics/sprites/head-mushroom.xml,
	data/graphics/sprites/head-shroom.xml,
	data/items.xml, data/equipment.xml:
	Fixed some problems with the new items.

2007-12-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/cave.png, data/graphics/tiles/cave_x2.png:
	Fixed the blurred outlines of the new tiles.

2007-12-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/tiles/cave.png, data/graphics/tiles/cave_x2.png,
	data/maps/new_4-1.tmx: Added two new cave tiles by yosuhara.

2007-12-12  Philipp Sehmisch  <tmw@crushnet.org>

	* tools/tmxcopy/base64.cpp,
	tools/tmxcopy/base64.h, tools/tmxcopy/main.cpp,
	tools/tmxcopy/map.cpp, tools/tmxcopy/map.hpp,
	tools/tmxcopy/readme.txt, tools/tmxcopy/tmxcopy.cbp,
	tools/tmxcopy/tostring.h, tools/tmxcopy/xmlutils.cpp,
	tools/tmxcopy/xmlutils.h, tools/tmxcopy/zlibutils.cpp,
	tools/tmxcopy/zlibutils.h: Added my tmxcopy tool for copying
	parts of maps to other maps.

2007-12-10  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/being.cpp: Include cassert header.

2007-12-10  Philipp Sehmisch  <tmw@crushnet.org>

	* src/being.cpp, src/being.h, src/net/beinghandler.cpp,
	src/net/charserverhandler.cpp, src/net/equipmenthandler.cpp,
	src/player.cpp, src/player.h, data/items.xml: Simplified player
	subsprite handling by treating equipment, hairstyle and base
	sprites alike. This also enables gender-specific hairstyles.